--- a/src/pages/lisboa.html
+++ b/src/pages/lisboa.html
@@ -70,7 +70,7 @@
 
         <img loading="lazy" style="width: max(40%, 300px)" src="https://kahvis-photos.s3.us-east-2.amazonaws.com/liboa+public+picks-20260113_174005/yellow_building.jpg"></img>
 
-        <p>took a boat cruise on the Douro</p>
+        <p>took a boat cruise on the Tagus</p>
 
         <img loading="lazy" style="width: max(40%, 300px)" src="https://kahvis-photos.s3.us-east-2.amazonaws.com/liboa+public+picks-20260113_174005/m_on_boat.jpg"></img>
         <img loading="lazy" style="width: max(40%, 300px)" src="https://kahvis-photos.s3.us-east-2.amazonaws.com/liboa+public+picks-20260113_174005/fam_looking_on_boat.jpg"></img>
