--- a/src/pages/newsletter-analysis/index.html
+++ b/src/pages/newsletter-analysis/index.html
@@ -126,7 +126,7 @@
   <h1>kahvi's newsletter analysis</h1>
   <p id="subtitle" style="color: #8b949e; margin-bottom: 8px;"></p>
   <div style="margin-bottom: 16px;">
-    <a href="./newsletter-analysis/compare.html" style="color: #8b949e; text-decoration: none; font-size: 13px;">Compare years →</a>
+    <a href="/newsletter-analysis/compare" style="color: #8b949e; text-decoration: none; font-size: 13px;">Compare years →</a>
   </div>
 
   <div id="yearFilter" style="margin-bottom: 16px;">
